minor: add home button final1.hbs

--- a/views/final1.hbs
+++ b/views/final1.hbs
@@ -193,8 +193,8 @@
             <b><p>2. Open  <a href="http://bit.ly/hackdotslashprogatelearningchallenge" style="font-size:20px"> This Link </a> and click 'Join' button</p></b>
             <br>
             <b><p>3. Start learning any one of these tracks -   HTML&CSS, JavaScript ES6, Python</p></b>
-            <br><br><br>
-              <a href="/" ><button id="slackBtn" style="margin-bottom : 30px;">HOME</button></a> --}}
+            <br><br><br> --}}
+            <a href="/"><button id="slackBtn" style="margin-bottom : 30px;">HOME</button></a>
           </div>
           <!-- /about content -->
         </div>
