--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,7 +148,9 @@ textarea.input {
 .swal2-popup .swal2-styled:focus {
   box-shadow: none !important;
 }
-
+.swal2-popup{
+  width: 55em !important;
+}
 h2.swal2-title h2 {
   margin: 0 !important;
 }
@@ -164,6 +166,7 @@ div#swal2-content ol {
 div#swal2-content ol li {
   margin-bottom: 0.5rem !important;
 }
+
 
 /* button:focus {
   background-color: #bd0c10 !important;
