linkedin social icon added

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1128,12 +1128,16 @@
                 <!-- contact social -->
                 <div class="col-md-8">
                   <div class="contact-social">
+                    
                     <a href="https://www.facebook.com/hackatdotslash/" target="_blank"><i
                         class="fa fa-facebook"></i></a>
                     <a href="https://twitter.com/hackatdotslash" target="_blank"><i class="fa fa-twitter"></i></a>
                     <a href="https://www.instagram.com/hackatdotslash/" target="_blank"><i
                         class="fa fa-instagram"></i></a>
-                    <a href="mailto:hackatdotslash@gmail.com" target="_blank"><i class="fa fa-google"></i></a>
+                    <a href="https://www.linkedin.com/company/hackatdotslash/" target="_blank">
+                      <i class="fa fa-linkedin"></i>
+                    </a>
+                    <a href="mailto:hackatdotslash@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
                   </div>
                 </div>
                 <!-- /contact social -->
@@ -1176,31 +1180,6 @@
               alterClass();
             });
             alterClass();
-          });
-
-
-
-
-
-          document.addEventListener('DOMContentLoaded', function () {
-            /*let devfolioOptions1 = {
-              buttonSelector: '#devfolio-apply-now1',
-              key: 'dotslash',
-            }
-            new Devfolio(devfolioOptions1);
-      
-            let devfolioOptions2 = {
-              buttonSelector: '#devfolio-apply-now2',
-              key: 'dotslash',
-            }
-            new Devfolio(devfolioOptions2);
-      
-      
-            script.onerror = function () {
-                document.querySelector(devfolioOptions.buttonSelector).addEventListener('click', function () {
-                    window.location.href = 'https://devfolio.co/external-apply/' + devfolioOptions.key;
-                });
-            }*/
           });
         </script>
 </body>
