micro cosmatic changes

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -126,12 +126,6 @@
           <div class="row">
             <!-- home content -->
             <div>
-              <!--
-            <div class="home-content">
-                <h1><img src="img/logo_only1.png" width="100px"><span style="color: #bd0c0e"> DOT</span><span style="color: black"> SLASH</span></h1>
-              <h4 class="lead">Root to Ideas</h4>
-            </div>
--->
               <div class="home-content" style="">
                 <h1 style="font-family: lato"><img src="img/logo_only1.png" class="animated rotateIn delay-1s" style=""
                     width="20%">&nbsp;<span style="color: #bd0c0e">DOT</span><span
@@ -139,8 +133,7 @@
                 <h4 class="lead" style="font-size: 25px;color: black; text-shadow:0 0 5px white;">Root to Ideas</h4>
                 <h5 class="lead" style="font-size: 30px;color: black;">
                   <button class="" id="devfolio-apply-now1" onclick="register()">Register </button>
-                  <h3 class="lead"
-                    style="box-shadow: 3px 3px #5d5d5d;font-size: 20px;color: #bd0c0e;font-weight:600; border: 1px solid black; border-radius: 10px; padding: 10px;">
+                  <h3 class="lead" id="hackathon__dates">
                     30-31st January, 2021</h3>
                   <h3 class="lead"><span style="font-size:20px">Powered by</span> <span
                       style="font-weight: 600">ASHINE</span></h3>
@@ -160,7 +153,8 @@
       <!-- /home wrapper -->
     </div>
     <!-- /Home -->
-
+    <br>
+    <br>
     <!-- About -->
     <div id="about" class="section">
       <!-- container -->
