--- a/public/css/style.css
+++ b/public/css/style.css
@@ -495,6 +495,17 @@ button:not(:focus) {
   text-align: center;
 }
 
+#hackathon__dates{
+  box-shadow: 2px 2px #5d5d5d;
+  font-size: 20px;
+  color: #bd0c0e;
+  font-weight:600;
+  border: 0.5px solid #5d5d5d;
+  border-radius: 7px;
+  padding: 10px;
+
+}
+
 /*=========================================================
 	ABOUT
 ===========================================================*/
@@ -938,7 +949,7 @@ button:not(:focus) {
   -webkit-box-align: center;
   align-items: center;
   background: #bd0c0e;
-  border-radius: 3px;
+  border-radius: 7px;
   border: none;
   color: #ffffff;
   cursor: pointer;
