css changes - home & coc page

--- a/views/coc.hbs
+++ b/views/coc.hbs
@@ -11,19 +11,19 @@
 </head>
 <style>
   body {
-    text-align: center;
-    background-color: #FFFAEF;
+    background-color: #fff;
   }
 
   .heading{
       color:#bd0c0e;
       font-size:50px;
+      text-align: center;
   }
 
   ul li {
-    font-size: 30px;
+    font-size: 15px;
     font-family: 'Poppins', sans-serif;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     }
     ul{
         list-style: disc
@@ -39,21 +39,24 @@
   .logofix{
       width:200px;
   }
+  .img-container{
+    text-align: center;
+  }
 
   .content {
     flex: 3
   }
   
   @media all and (max-width:768px){
-        .heading{
-      color:#bd0c0e;
-      font-size:30px;
+    .heading{
+    color:#bd0c0e;
+    font-size:30px;
   }
 
   ul li {
-    font-size: 20px;
+    font-size: 15px;
     font-family: 'Poppins', sans-serif;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     }
   }
 
@@ -94,7 +97,7 @@
         <li>We expect participants to follow these rules at hackathon and workshop venues and hackathon-related
           social events.</li>
       </ul>
-      <h2>Our code of conduct is based on the <a href="https://hackcodeofconduct.org/">Hack Code of Conduct.</a></h2>
+      <h4>Our code of conduct is based on the <a href="https://hackcodeofconduct.org/">Hack Code of Conduct.</a></h4>
     </div>
     <div class="col"></div>
   </div>
