final page content added

--- a/views/final1.hbs
+++ b/views/final1.hbs
@@ -174,26 +174,18 @@
           <!-- about content -->
           <div class="about-content">
             <h2 style="color: #c00000">Congrats! You're registered!</h2>
-            {{!-- <p> <b>Dotslash</b> cares for its <b>hackers</b> so whether you are a seasoned hacker or an absolute beginner we have something special for you!
-		Dotslash in association with <b>PROGATE</b> brings to you the <b>DOTSLASH LEARNING CHALLENGE</b> </p>
-              <br>
-            <p><b>Progate</b> is an awesome online platform designed for beginners to learn to code. Progate follows an <b>intutive slide based</b> approach by which its users can learn basics of programming easily as compared
-		to the traditional method of going through "long and dull video lectures".
-                 We want our <b>hackers</b> to benefit from <b>Progate</b> so that they can learn a new skill or polish an exsisting one as this will boost your confidence and help you to come up with even better solutions during the hackathon!
-            </p>
+            
+            <p>Thank You for registering!!</p> 
+          <br>
+          <p>You are requested to follow all our social media handles and to keep checking regularly for updates.</p>
+          <p>
+            All the shortlisted candidates will be informed via mail about their acceptance. We will be informing about the releasing of the selected teams on all our social media accounts.
             <br>
-<p style="font-size:18px;"><strong>The top 3 hackers from the challenge will also receive a progate t-shirt at the hackathon!</strong></p>
-<br>
-            <h2>
-                <b>Here are steps you need to follow in order to claim the benefit :- </b>
-            </h2>
             <br>
-            <b><p>1. Signup on <a href="https://progate.com" style="font-size:20px"> PROGATE </a> from a laptop/desktop</p></b>
-            <br>
-            <b><p>2. Open  <a href="http://bit.ly/hackdotslashprogatelearningchallenge" style="font-size:20px"> This Link </a> and click 'Join' button</p></b>
-            <br>
-            <b><p>3. Start learning any one of these tracks -   HTML&CSS, JavaScript ES6, Python</p></b>
-            <br><br><br> --}}
+            Till then Happy Learning😄
+          </p>
+          <br>
+          <br>
             <a href="/"><button id="slackBtn" style="margin-bottom : 30px;">HOME</button></a>
           </div>
           <!-- /about content -->
@@ -202,6 +194,41 @@
       <!-- row -->
     </div>
     <!-- /container -->
+    <footer id="footer">
+            <!-- container -->
+            <div class="container">
+              <!-- row -->
+              <div class="row">
+
+                <!-- footer logo -->
+                <div class="col-md-4">
+                </div>
+                <!-- /footer logo -->
+
+                <!-- contact social -->
+                <div class="col-md-8">
+                  <div class="contact-social">
+                    
+                    <a href="https://www.facebook.com/hackatdotslash/" target="_blank"><i
+                        class="fa fa-facebook"></i></a>
+                    <a href="https://twitter.com/hackatdotslash" target="_blank"><i class="fa fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/hackatdotslash/" target="_blank"><i
+                        class="fa fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/hackatdotslash/" target="_blank">
+                      <i class="fa fa-linkedin"></i>
+                    </a>
+                    <a href="mailto:hackatdotslash@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+                  </div>
+                </div>
+                <!-- /contact social -->
+
+              </div>
+              <!-- /row -->
+            </div>
+            <!-- /container -->
+          </footer>
+          <!-- /Footer -->
+        </div>
   </div>
   <!-- /About -->
 
