final page updated

--- a/views/final1.hbs
+++ b/views/final1.hbs
@@ -58,6 +58,16 @@
     top: 10px;
     width: 250px;
   }
+  #footer{
+    padding-right: 12%;
+    padding-top: 20px;
+  }
+  @media only screen and (max-width: 991px){
+    #footer{
+    padding-right: 0;
+    padding-top: 0;
+  }
+  }
 </style>
 
 <body>
@@ -174,19 +184,19 @@
           <!-- about content -->
           <div class="about-content">
             <h2 style="color: #c00000">Congrats! You're registered!</h2>
-            
+            <br>
             <p>Thank You for registering!!</p> 
           <br>
-          <p>You are requested to follow all our social media handles and to keep checking regularly for updates.</p>
+          <p>You are requested to follow all our social media handles and to keep checking them regularly for updates.</p>
           <p>
-            All the shortlisted candidates will be informed via mail about their acceptance. We will be informing about the releasing of the selected teams on all our social media accounts.
+            All the shortlisted candidates will be informed via email about their acceptance. We will inform you about the release of the selected teams through our social media accounts.
             <br>
             <br>
             Till then Happy Learning😄
           </p>
           <br>
           <br>
-            <a href="/"><button id="slackBtn" style="margin-bottom : 30px;">HOME</button></a>
+            <a href="/"><button id="slackBtn">HOME</button></a>
           </div>
           <!-- /about content -->
         </div>
@@ -195,40 +205,18 @@
     </div>
     <!-- /container -->
     <footer id="footer">
-            <!-- container -->
-            <div class="container">
-              <!-- row -->
-              <div class="row">
-
-                <!-- footer logo -->
-                <div class="col-md-4">
-                </div>
-                <!-- /footer logo -->
-
-                <!-- contact social -->
-                <div class="col-md-8">
-                  <div class="contact-social">
-                    
-                    <a href="https://www.facebook.com/hackatdotslash/" target="_blank"><i
-                        class="fa fa-facebook"></i></a>
-                    <a href="https://twitter.com/hackatdotslash" target="_blank"><i class="fa fa-twitter"></i></a>
-                    <a href="https://www.instagram.com/hackatdotslash/" target="_blank"><i
-                        class="fa fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/company/hackatdotslash/" target="_blank">
-                      <i class="fa fa-linkedin"></i>
-                    </a>
-                    <a href="mailto:hackatdotslash@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
-                  </div>
-                </div>
-                <!-- /contact social -->
-
-              </div>
-              <!-- /row -->
-            </div>
-            <!-- /container -->
-          </footer>
-          <!-- /Footer -->
-        </div>
+      <div class="contact-social">
+        <a href="https://www.facebook.com/hackatdotslash/" target="_blank"><i
+            class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/hackatdotslash" target="_blank"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.instagram.com/hackatdotslash/" target="_blank"><i
+            class="fa fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/hackatdotslash/" target="_blank">
+          <i class="fa fa-linkedin"></i>
+        </a>
+        <a href="mailto:hackatdotslash@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+      </div>
+    </footer>
   </div>
   <!-- /About -->
 
