minor: update form and home for online mode

--- a/views/form.hbs
+++ b/views/form.hbs
@@ -389,7 +389,7 @@
                 </p>
               </div>
             </div>
-            <div class="row">
+            {{!-- <div class="row">
               <div class="input-field col s12">
                 <label class="mode">If the mode of conduct is decided as offline, i.e in SVNIT campus then would you be
                   willing to
@@ -409,7 +409,7 @@
                   </label>
                 </p>
               </div>
-            </div>
+            </div> --}}
             <div class="row">
               <div class="input-field col s12 res" style="margin-top: 50px;">
                 <select id="textarea2" name="textarea2">
