--- a/views/home.hbs
+++ b/views/home.hbs
@@ -953,12 +953,8 @@
                         <span><i class="material-icons prefix arrow-img12">play_arrow</i></span>What will be the mode of
                         conduct of hackathon?
                       </h2>
-                      <p class="collapse box1" id="num13">Currently, we plan to conduct Dotslash 4.0 on campus wherein
-                        participants and judges will be
-                        physically present. But if we are not able to do so due to COVID-19 precautionary guidelines
-                        given by the government and
-                        college, then the hackathon will be conducted online. The confirmed mode of conduct will be
-                        declared by Mid-December.</p>
+                      <p class="collapse box1" id="num13">Due to the current pandemic situation, mode of conduct will be
+                        online this year</p>
                       <br>
                     </div>
                   </div>
