update faq + tracks section

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -358,15 +358,20 @@
           <br> <b style="color:  #bd0c0e;">The track will be open with no predefined problem statement</b>
         </p>
       </div> --}}
-        <div class="col-xs-6">
-          <h2 style="color: #bd0c0e">Software</h2>
-          <img src="img/soft.png" class="img-responsive" alt="" style="margin: 0 auto; width: auto;">
-          <p>Explore the realms of Web and Mobile based applications while developing your ideas under this track. You
-            are free to use any framework and any code fragment, until and unless it is open sourced.</p>
-          The limits are endless and the possiblities are infinite.
-          <br><b style="color:  #bd0c0e;">The track will contain problem statements.</b>
+        <div class="col-md-8 col-md-offset-2">
+          <div class="row" style="text-align:center">
+            <img src="img/soft.png" alt="" style="margin: 0 auto; width: auto;">
+          </div>
+          <div class="row text-center">
+            <p>Explore the realms of Web and Mobile based applications while developing your ideas under this track. You
+              are free to use any framework and any code fragment, until and unless it is open sourced.</p>
+            <p>
+              The limits are endless and the possiblities are infinite.
+            </p>
+            <b style="color:  #bd0c0e;">Problem Statement will be provided at the time of The Hackathon.</b>
+          </div>
         </div>
-        <div class="col-xs-6">
+        {{!-- <div class="col-xs-6">
           <h2 style="color: #bd0c0e">Hardware</h2>
           <img src="img/hardware.png" class="img-responsive" alt="" style="margin: 0 auto; width: auto;">
           <p style="margin-bottom:5px;">Want to develop your ideas to interact with the physical world? Under this track
@@ -374,7 +379,7 @@
             <br>If you have some special hardware requirements, we request you to bring those alongwith.
             <br><b style="color:  #bd0c0e;">The track will contain problem statements.</b>
           </p>
-        </div>
+        </div> --}}
       </div>
       <br>
       <!--<div class="row">-->
@@ -848,12 +853,10 @@
 
                       </h2>
                       <p class="collapse box1" id="num4">Yes! This hackathon is a team competition. Most teams aim to
-                        have a
-                        mix of people with both design and developer
-                        skills. If you don't have a team, you can participate individually. We'll have team formation at
-                        the
-                        time of
-                        hackathon.</p>
+                        have a mix of people with both design and developer skills.
+                        You can have a maximum of 3 members per team. If you don't have a team, you can participate
+                        individually. We'll have
+                        team formation at the time of hackathon.</p>
                       <br>
                       <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow4" href="#num5"
                         style="cursor: pointer; font-weight: 300;">
@@ -862,14 +865,14 @@
                         DotSlash?
                       </h2>
                       <p class="collapse box1" id="num5">Pretty much everything from socializing with fellow hacker
-                        communities. And yeah we’ll have prizes for 1st, 2nd,
-                        3rd place, as well as the best hardware hack. Most of all, you will gain an unparalleled
-                        learning
-                        experience and memories for a lifetime!<br><br>You will also get a cool geeky T-Shirt,
-                        Certificate of
-                        Participation and a bag full of schwags.</p>
+                        communities. And yeah we’ll have prizes for 1st, 2nd, 3rd
+                        place. Most of all, you will gain an unparalleled learning experience and memories for a
+                        lifetime!
+
+                        You will also get a cool geeky T-Shirt, Certificate of Participation and a bag full of schwags.
+                      </p>
                       <br>
-                      <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow5" href="#num6"
+                      {{!-- <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow5" href="#num6"
                         style="cursor: pointer; font-weight: 300;">
                         <span><i class="material-icons prefix arrow-img5">play_arrow</i></span>What do I need to bring
                         after
@@ -878,8 +881,8 @@
                       <p class="collapse box1" id="num6">A valid college issued photo ID, hardcopy of acceptance mail,
                         laptop,
                         phone, chargers, any sleeping equipment you might want (we'll be providing mattresses)!</p>
-                      <br>
-                      <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow6" href="#num7"
+                      <br> --}}
+                      {{!-- <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow6" href="#num7"
                         style="cursor: pointer; font-weight: 300;">
                         <span><i class="material-icons prefix arrow-img6">play_arrow</i></span>What facilities will be
                         provided
@@ -890,11 +893,11 @@
                         refreshments that you will need. You will also be given a Geeky T-Shirt!
                         <br>
                         <br> We will also provide a Certificate of Participation to every participant.</p>
-                      <br>
+                      <br> --}}
 
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                      <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow7" href="#num8"
+                      {{!-- <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow7" href="#num8"
                         style="cursor: pointer; font-weight: 300;">
                         <span><i class="material-icons prefix arrow-img7">play_arrow</i></span>What shouldn’t I bring?
 
@@ -903,7 +906,7 @@
                         of any
                         kind, drugs, or alcohol. If you’re not
                         sure whether something will be okay, please ask ahead of time!</p>
-                      <br>
+                      <br> --}}
                       <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow8" href="#num9"
                         style="cursor: pointer; font-weight: 300;">
                         <span><i class="material-icons prefix arrow-img8">play_arrow</i></span>What will be the theme
@@ -936,7 +939,7 @@
                         but it’s not a requirement. We’ll have talks, mentors and workshops to help you with your
                         project.</p>
                       <br>
-                      <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow11" href="#num12"
+                      {{!-- <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow11" href="#num12"
                         style="cursor: pointer; font-weight: 300;">
                         <span><i class="material-icons prefix arrow-img11">play_arrow</i></span>What about hardware?
                       </h2>
@@ -946,7 +949,7 @@
                         and enable you to work on your dream hack. We’ll put out a list closer to the event so you can
                         see
                         what’s available.</p>
-                      <br>
+                      <br> --}}
 
                       <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow12" href="#num13"
                         style="cursor: pointer; font-weight: 300;">
