--- a/views/home.hbs
+++ b/views/home.hbs
@@ -363,7 +363,7 @@
             <img src="img/soft.png" alt="" style="margin: 0 auto; width: auto;">
           </div>
           <div class="row text-center">
-            <p>Explore the realms of Web and Mobile based applications while developing your ideas under this track. You
+            <p>Explore the realms of Web and Mobile based applications while developing your ideas. You
               are free to use any framework and any code fragment, until and unless it is open sourced.</p>
             <p>
               The limits are endless and the possiblities are infinite.
