--- a/views/home.hbs
+++ b/views/home.hbs
@@ -19,10 +19,10 @@
   <title>DotSlash</title>
   <link rel="shortcut icon" type="image/png" href="/img/logo_only1.png" />
   <!-- Google font -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet preconnect dns-prefetch">
   <link
     href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:800i|Amaranth:700i|Kanit:700i|Lato:900i|Source+Sans+Pro:900i"
-    rel="stylesheet">
+    rel="stylesheet preconnect dns-prefetch">
   <!-- Bootstrap -->
   <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
 
@@ -32,7 +32,7 @@
 
   <!-- Font Awesome Icon -->
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet preconnect dns-prefetch">
   <!-- Custom stlylesheet -->
   <link type="text/css" rel="stylesheet" href="css/style.css" />
 
@@ -42,7 +42,7 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
+  <link rel="stylesheet preconnect dns-prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
 </head>
 <style>
   .rotate {
@@ -643,7 +643,7 @@
                 <img src="img/echoAR.png" alt="">
               </a>
               <a href="https://www.clerky.com/" target="_blank" class="sponsor">
-                <img src="https://www.clerky.com/assets/images/logo-md-462f7222.svg" alt="" style="width: 15rem;">
+                <img src="img/clerky-logo.svg" alt="" style="width: 15rem;">
               </a>
               <a href="https://www.careernaksha.com/" target="_blank" class="sponsor">
                 <img src="img/CareerNaksha.jpeg" alt="">
