updates -text compression -images resized + compressed

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -630,40 +630,40 @@
               justify-content: center;
               align-items: center;"
             >
-              <a href="https://www.github.com/" target="_blank" class="sponsor">
+              <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer" >
                 <img src="img/github-logo.jpg" alt="">
               </a>
-              <a href="https://www.wolfram.com/" target="_blank" class="sponsor">
+              <a href="https://www.wolfram.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/wolfram.jpg" alt="">
               </a>
-              <a href="https://www.sashido.io/en/" target="_blank" class="sponsor">
+              <a href="https://www.sashido.io/en/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sashido.png" alt="">
               </a>
-              <a href="https://www.echoar.xyz/" target="_blank" class="sponsor">
+              <a href="https://www.echoar.xyz/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/echoAR.png" alt="">
               </a>
-              <a href="https://www.clerky.com/" target="_blank" class="sponsor">
+              <a href="https://www.clerky.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/clerky-logo.svg" alt="" style="width: 15rem;">
               </a>
-              <a href="https://www.careernaksha.com/" target="_blank" class="sponsor">
+              <a href="https://www.careernaksha.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/CareerNaksha.jpeg" alt="">
               </a>
-              <a href="https://www.axure.com/" target="_blank" class="sponsor">
+              <a href="https://www.axure.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/axure.png" alt="">
               </a>
-              <a href="https://interwebs.host/" target="_blank" class="sponsor">
+              <a href="https://interwebs.host/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/interwebshost.png" alt="">
               </a>
-              <a href="https://www.hackathonsinternational.com/" target="_blank" class="sponsor">
+              <a href="https://www.hackathonsinternational.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/Hackathons_International_Logo.png" alt="">
               </a>
-              <a href="https://balsamiq.com/" target="_blank" class="sponsor">
+              <a href="https://balsamiq.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/balsamiq.svg" alt="">
               </a>
-              <a href="https://www.producthunt.com/" target="_blank" class="sponsor">
+              <a href="https://www.producthunt.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/profucthunt-logo.png" alt="" style="width: 15rem;">
               </a>
-              <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor">
+              <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/rosenfeld.jpg" alt="">
               </a>
             </div>
@@ -688,88 +688,88 @@
               justify-content: center;
               align-items: center;
             ">
-              <a href="https://www.creative-tim.com/" target="_blank" class="sponsor">
+              <a href="https://www.creative-tim.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="./img/tim-creative.png" alt="">
               </a>
-              <a href="https://progate.com/" target="_blank" class="sponsor">
+              <a href="https://progate.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="./img/progate.png" alt="">
               </a>
-              <a href="https://www.teqip.in/" target="_blank" class="sponsor">
+              <a href="https://www.teqip.in/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="./img/teqip.png" alt="">
               </a>
-              <a href="https://www.agora.io/" target="_blank" class="sponsor">
+              <a href="https://www.agora.io/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/agora.png" alt="">
               </a>
-              <a href="https://balsamiq.com/" target="_blank" class="sponsor">
+              <a href="https://balsamiq.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/balsamiq.svg" alt="">
               </a>
-              <a href="https://cloudsploit.com/" target="_blank" class="sponsor">
+              <a href="https://cloudsploit.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/cloudsploit-logo.png" alt="">
               </a>
-              <a href="https://www.codingninjas.com/" target="_blank" class="sponsor">
+              <a href="https://www.codingninjas.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/Cnlogo-01.png" alt="">
               </a>
-              <a href="https://www.codacy.com/" target="_blank" class="sponsor">
+              <a href="https://www.codacy.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/codacy-logo.png" alt="">
               </a>
-              <a href="https://github.com/" target="_blank" class="sponsor">
+              <a href="https://github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/github-logo.jpg" alt="">
               </a>
-              <a href="https://codingblocks.com/" target="_blank" class="sponsor">
+              <a href="https://codingblocks.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/coding-blocks-logo.png" alt="">
               </a>
-              <a href="https://www.wolfram.com/language/" target="_blank" class="sponsor">
+              <a href="https://www.wolfram.com/language/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/wolfram.png" alt="">
               </a>
-              <a href="https://www.linode.com/" target="_blank" class="sponsor">
+              <a href="https://www.linode.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/linode-logo.png" alt="">
               </a>
-              <a href="https://www.jetbrains.com/" target="_blank" class="sponsor">
+              <a href="https://www.jetbrains.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="./img/jetbrains.png" alt="">
               </a>
-              <a href="https://matic.network/" target="_blank" class="sponsor">
+              <a href="https://matic.network/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/Matic.png" alt="">
               </a>
-              <a href="https://zujo.io/" target="_blank" class="sponsor">
+              <a href="https://zujo.io/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/juzo.png" alt="">
               </a>
-              <a href="https://www.bugsee.com/" target="_blank" class="sponsor">
+              <a href="https://www.bugsee.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/bugsee.png" alt="">
               </a>
-              <a href="https://www.aasaanjobs.com/" style="opacity:1" target="_blank" class="sponsor">
+              <a href="https://www.aasaanjobs.com/" style="opacity:1" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/aasanjobs.png" alt="">
               </a>
-              <a href="https://monday.com/" style="opacity:1" target="_blank" class="sponsor">
+              <a href="https://monday.com/" style="opacity:1" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/mo.png" alt="">
               </a>
-              <a href="https://get.tech/" target="_blank" class="sponsor">
+              <a href="https://get.tech/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/tech-logo.jpg" alt="">
               </a>
-              <a href="http://www.ssipgujarat.in" style="opacity:1" target="_blank" class="sponsor">
+              <a href="http://www.ssipgujarat.in" style="opacity:1" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/ssip.jpeg" alt="">
               </a>
-              <a href="https://backbuckle.io/" target="_blank" class="sponsor">
+              <a href="https://backbuckle.io/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/BBLogo1.png" alt="">
               </a>
-              <a href="https://oswaldlabs.com/" target="_blank" class="sponsor">
+              <a href="https://oswaldlabs.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/oswald-lab.png" alt="">
               </a>
-              <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor">
+              <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/rosenfeld.jpg" alt="">
               </a>
-              <a href="https://www.womenwhocode.com/" target="_blank" class="sponsor">
+              <a href="https://www.womenwhocode.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/wwc.jpg" alt="">
               </a>
-              <a href="https://zubi.io/" target="_blank" class="sponsor">
+              <a href="https://zubi.io/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/zubi.png" alt="" style="width: 15rem;">
               </a>
-              <a href="https://www.uxpin.com/" target="_blank" class="sponsor">
+              <a href="https://www.uxpin.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/UXPin-Logo-BlackFill@2x.png" alt="" style="width: 15rem;">
               </a>
-              <a href="https://www.producthunt.com/" target="_blank" class="sponsor">
+              <a href="https://www.producthunt.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/profucthunt-logo.png" alt="" style="width: 15rem;">
               </a>
-              <a href="https://pomodoneapp.com/" target="_blank" class="sponsor">
+              <a href="https://pomodoneapp.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/pomodone-logo.png" alt="" style="width: 15rem;">
               </a>
             </div>
