--- a/views/coc.hbs
+++ b/views/coc.hbs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" type="image/png" href="/img/logo_only1.png" />
   <link rel="stylesheet" href="css/style.css">
   <title>Code of Conduct</title>
 </head>
