--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,25 +4,33 @@
 <head>
   <meta charset="utf-8">
   <meta property="og:type" content="article" />
+  <meta property="og:site_name" content="HackDotslash4.0">
   <meta property="og:title" content="Dotslash Hackathon: Root To Ideas" />
   <meta property="og:description" content="DotSlash​ is a 30 hours long hackathon which is completely managed by students of SVNIT, Surat. It is a
               platform for developers around the world to use their innovative skills to produce something new and
               useful for the society." />
+  <meta name="Description" content="DotSlash​ is a 30 hours long hackathon which is completely managed by students of SVNIT, Surat. It is a
+              platform for developers around the world to use their innovative skills to produce something new and
+              useful for the society.">
   <meta property="og:image:secure_url" content="/img/logo_only.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="300" />
+  <meta property="og:url" content="https://www.hackdotslash.co.in">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
   <title>DotSlash</title>
   <link rel="shortcut icon" type="image/png" href="/img/logo_only1.png" />
+  {{!-- <link rel="preload" href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,700,900"></noscript>
+  loading syles async --}}
   <!-- Google font -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet preconnect dns-prefetch">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
   <link
     href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:800i|Amaranth:700i|Kanit:700i|Lato:900i|Source+Sans+Pro:900i"
-    rel="stylesheet preconnect dns-prefetch">
+    rel="stylesheet">
   <!-- Bootstrap -->
   <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
 
@@ -32,17 +40,11 @@
 
   <!-- Font Awesome Icon -->
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet preconnect dns-prefetch">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Custom stlylesheet -->
   <link type="text/css" rel="stylesheet" href="css/style.css" />
 
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
-  <link rel="stylesheet preconnect dns-prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
 </head>
 <style>
   .rotate {
@@ -113,7 +115,7 @@
       <div class="home-wrapper">
         <!-- container -->
         <div class="container" style="">
-          <img src="img/main.png" class="img-responsive" alt="" style="">
+          <img src="img/main.svg" class="img-responsive" alt="" style="">
           <img src="img/main-vector.png" class="img-responsive img-vector" alt="">
           {{!-- <img src="img/illustration.png" class="img-bg" alt="" style="
             
@@ -238,91 +240,91 @@
           <div id="galery-owl" class="owl-carousel owl-theme">
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_1.jpg" alt="">
+              <img src="./img/galery/new_1.jpg" alt="">
             </div>
             <!-- /galery item -->
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_2.jpg" alt="">
+              <img src="./img/galery/new_2.jpg" alt="">
             </div>
             <!-- /galery item -->
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_3.jpg" alt="">
+              <img src="./img/galery/new_3.jpg" alt="">
             </div>
             <!-- /galery item -->
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_4.jpg" alt="">
+              <img src="./img/galery/new_4.jpg" alt="">
             </div>
             <!-- /galery item -->
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_5.jpg" alt="">
+              <img src="./img/galery/new_5.jpg" alt="">
             </div>
             <!-- /galery item -->
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_6.jpg" alt="">
+              <img src="./img/galery/new_6.jpg" alt="">
             </div>
             <!-- /galery item -->
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_7.jpg" alt="">
+              <img src="./img/galery/new_7.jpg" alt="">
             </div>
             <!-- /galery item -->
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_8.jpg" alt="">
+              <img src="./img/galery/new_8.jpg" alt="">
             </div>
             <!-- /galery item -->
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_9.jpg" alt="">
+              <img src="./img/galery/new_9.jpg" alt="">
             </div>
             <!-- /galery item -->
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_10.jpg" alt="">
+              <img src="./img/galery/new_10.jpg" alt="">
             </div>
             <!-- /galery item -->
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_12.jpg" alt="">
+              <img src="./img/galery/new_12.jpg" alt="">
             </div>
             <!-- /galery item -->
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_15.jpg" alt="">
+              <img src="./img/galery/new_15.jpg" alt="">
             </div>
             <!-- /galery item -->
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_13.jpg" alt="">
+              <img src="./img/galery/new_13.jpg" alt="">
             </div>
             <!-- /galery item -->
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_14.jpg" alt="">
+              <img src="./img/galery/new_14.jpg" alt="">
             </div>
             <!-- /galery item -->
 
             <!-- galery item -->
             <div class="galery-item">
-              <img src="./img/new_11.jpg" alt="">
+              <img src="./img/galery/new_11.jpg" alt="">
             </div>
             <!-- /galery item -->
 
@@ -334,9 +336,10 @@
       <!-- /container -->
     </div>
     <!-- /Galery -->
-    <br><br><br><br>
+    
 
     <div class="container tracks section">
+      <br><br>
       <div class="row">
         <div class="col-xs-12">
           <div class="section-title">
@@ -354,11 +357,11 @@
           <br> <b style="color:  #bd0c0e;">The track will be open with no predefined problem statement</b>
         </p>
         </div> --}}
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-8 col-md-offset-2" >
           <div class="row" style="text-align:center">
-            <img src="img/soft.png" alt="" style="margin: 0 auto; width: auto;">
+            <img src="img/soft.svg" alt="" style="margin: 0 auto; width: auto;">
           </div>
-          <div class="row text-center">
+          <div class="row text-center" style="margin: auto 20px;">
             <p>Explore the realms of Web and Mobile based applications while developing your ideas. You
               are free to use any framework and any code fragment, until and unless it is open sourced.</p>
             <p>
@@ -378,8 +381,9 @@
             <br><b style="color:  #bd0c0e;">The track will contain problem statements.</b>
           </p>
         </div> --}}
+        <br>
       </div>
-      <br>
+      
       <!--<div class="row">-->
       <!--<div class="col-md-8 col-md-offset-2 text-center">-->
       <!--about content -->
@@ -812,7 +816,7 @@
                 <h3 class="title"><span style="color: #000;">Frequently Asked &nbsp;</span><span
                     style="color: #bd0c0e;">Questions</span></h3>
               </div>
-              <img src="img/faq.png">
+              <img src="img/faq.svg">
             </div>
           </div>
 
@@ -1004,7 +1008,7 @@
         <!-- /container -->
       </div>
       <!-- /CTA -->
-    <br><br><br>
+    
       <!-- Contact -->
       <div id="contact" class="section">
         <!-- container -->
